# bevy_trait

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: main.rs
impl/: Cargo.toml  README.md
impl/src/: lib.rs
src/: lib.rs
