[package]
name = "bevy_trait"
version = "0.3.2"
edition = "2021"
description = "Macros for creating Traits in Bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hankjordan/bevy_trait"

[lib]
proc-macro = true

[dev-dependencies]
bevy = "0.15.3"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
